// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite-plugin vapor options > avoids collisions with local render bindings in script setup 1`] = `
"import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { template as _template } from 'vue';

const t0 = _template("<div>Hello</div>", true)

function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  return n0
}
const __vaporRender = render

export default /*@__PURE__*/_defineVaporComponent({
  __name: 'Collision',
  render: __vaporRender,
  setup(__props, { emit: __emit, attrs: __attrs, slots: __slots }) {

function render() {
  return "local";
}

const __returned__ = { render }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})"
`;

exports[`vite-plugin vapor options > builds scoped single-file options with vapor enabled 1`] = `
{
  "customRenderer": false,
  "experimentalInTagComments": false,
  "experimentalPatternedTemplate": false,
  "experimentalSelfComponent": false,
  "experimentalServerScript": false,
  "experimentalStrictSlotChildren": false,
  "filename": "/src/App.vue",
  "scopeId": "data-v-c0cc6f12",
  "sourceMap": true,
  "ssr": false,
  "styleTrim": undefined,
  "vapor": true,
}
`;

exports[`vite-plugin vapor options > compiles script setup SFCs to a full Vapor render block 1`] = `
"import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';

const t0 = _template("<div> </div>", true)

function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  const x0 = _txt(n0)
  _renderEffect(() => _setText(x0, _toDisplayString(_ctx.count)))
  return n0
}
const __vaporRender = render

import { ref } from "vue";


export default /*@__PURE__*/_defineVaporComponent({
  __name: 'App',
  render: __vaporRender,
  setup(__props, { emit: __emit, attrs: __attrs, slots: __slots }) {

const count = ref(1);

const __returned__ = { ref, count }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})"
`;

exports[`vite-plugin vapor options > compiles the playground app itself to Vapor output 1`] = `
"import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { createComponentWithFallback as _createComponentWithFallback, child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, setProp as _setProp, setAttr as _setAttr, createInvoker as _createInvoker, delegateEvents as _delegateEvents, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';

const t0 = _template("<svg viewBox=\\"0 0 24 24\\" width=\\"18\\" height=\\"18\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"2\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"><circle cx=\\"12\\" cy=\\"12\\" r=\\"5\\"></circle><line x1=\\"12\\" y1=\\"1\\" x2=\\"12\\" y2=\\"3\\"></line><line x1=\\"12\\" y1=\\"21\\" x2=\\"12\\" y2=\\"23\\"></line><line x1=\\"4.22\\" y1=\\"4.22\\" x2=\\"5.64\\" y2=\\"5.64\\"></line><line x1=\\"18.36\\" y1=\\"18.36\\" x2=\\"19.78\\" y2=\\"19.78\\"></line><line x1=\\"1\\" y1=\\"12\\" x2=\\"3\\" y2=\\"12\\"></line><line x1=\\"21\\" y1=\\"12\\" x2=\\"23\\" y2=\\"12\\"></line><line x1=\\"4.22\\" y1=\\"19.78\\" x2=\\"5.64\\" y2=\\"18.36\\"></line><line x1=\\"18.36\\" y1=\\"5.64\\" x2=\\"19.78\\" y2=\\"4.22\\"></line></svg>", true, 1)
const t1 = _template("<svg viewBox=\\"0 0 24 24\\" width=\\"18\\" height=\\"18\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"2\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"><path d=\\"M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z\\"></path></svg>", true, 1)
const t2 = _template("<div class=\\"app\\"><header class=\\"header\\"><div class=\\"logo\\"><div class=\\"logo-icon\\"><svg viewBox=\\"0 0 100 100\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><g transform=\\"translate(15, 10) skewX(-15)\\"><path d=\\"M 65 0 L 40 60 L 70 20 L 65 0 Z\\" fill=\\"currentColor\\"></path><path d=\\"M 20 0 L 40 60 L 53 13 L 20 0 Z\\" fill=\\"currentColor\\"></path></g></svg></div><div class=\\"logo-text\\"><h1>Vize</h1><span class=\\"version\\"> Playground <span> </span><span id=\\"vize-playground-version\\" class=\\"version-number\\"></span></span></div></div><div class=\\"main-tabs\\"><button type=\\"button\\"><span class=\\"tab-name\\">Atelier</span><span class=\\"tab-desc\\">compiler</span></button><button type=\\"button\\"><span class=\\"tab-name\\">Inspector</span><span class=\\"tab-desc\\">diff</span></button><button type=\\"button\\"><span class=\\"tab-name\\">Patina</span><span class=\\"tab-desc\\">linter</span></button><button type=\\"button\\"><span class=\\"tab-name\\">Glyph</span><span class=\\"tab-desc\\">formatter</span></button><button type=\\"button\\"><span class=\\"tab-name\\">Canon</span><span class=\\"tab-desc\\">typecheck</span></button><button type=\\"button\\"><span class=\\"tab-name\\">Croquis</span><span class=\\"tab-desc\\">analyzer</span></button><button type=\\"button\\"><span class=\\"tab-name\\">Cross</span><span class=\\"tab-desc\\">xfile</span></button><button type=\\"button\\"><span class=\\"tab-name\\">Musea</span><span class=\\"tab-desc\\">story</span></button><button type=\\"button\\"><span class=\\"tab-name\\">Davinci</span><span class=\\"tab-desc\\">stages</span></button></div><div class=\\"options\\"><button type=\\"button\\" class=\\"theme-toggle\\" title=\\"Copy environment information\\" aria-label=\\"Copy environment information\\"><svg viewBox=\\"0 0 24 24\\" width=\\"18\\" height=\\"18\\" aria-hidden=\\"true\\"><path fill=\\"currentColor\\"></path></svg></button><button type=\\"button\\" class=\\"theme-toggle\\"></button><a href=\\"https://github.com/ubugeeei-prod/vize\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"github-link\\" aria-label=\\"GitHub repository\\"><svg viewBox=\\"0 0 24 24\\" width=\\"24\\" height=\\"24\\" fill=\\"currentColor\\"><path d=\\"M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z\\"></path></svg></a></div></header><main class=\\"main\\"></main><footer class=\\"footer\\"><span>Built with Rust + WASM</span><span class=\\"separator\\">|</span><span>by <a href=\\"https://github.com/ubugeeei\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@ubugeeei</a></span></footer></div>", true)
_delegateEvents("click")

function render(_ctx, $props, $emit, $attrs, $slots) {
  const n2 = t2()
  const n0 = _child(n2)
  const n3 = _child(n0)
  const n6 = _next(_child(n3), 1)
  const n7 = _next(_child(n6), 1)
  const n8 = _next(_child(n7), 1)
  const n4 = _next(n3, 1)
  const n9 = _child(n4)
  const n10 = _next(n9, 1)
  const n11 = _next(n10, 2)
  const n12 = _next(n11, 3)
  const n13 = _next(n12, 4)
  const n14 = _next(n13, 5)
  const n15 = _next(n14, 6)
  const n16 = _next(n15, 7)
  const n17 = _next(n16, 8)
  const n5 = _next(n4, 2)
  const n18 = _child(n5)
  const n20 = _child(n18)
  const n21 = _child(n20)
  const n19 = _next(n18, 1)
  const n1 = _next(n0, 1)
  const x8 = _txt(n8)
  n9.$evtclick = _createInvoker(() => (_ctx.mainTab = 'atelier'))
  n10.$evtclick = _createInvoker(() => (_ctx.mainTab = 'inspector'))
  n11.$evtclick = _createInvoker(() => (_ctx.mainTab = 'patina'))
  n12.$evtclick = _createInvoker(() => (_ctx.mainTab = 'glyph'))
  n13.$evtclick = _createInvoker(() => (_ctx.mainTab = 'canon'))
  n14.$evtclick = _createInvoker(() => (_ctx.mainTab = 'croquis'))
  n15.$evtclick = _createInvoker(() => (_ctx.mainTab = 'cross-file'))
  n16.$evtclick = _createInvoker(() => (_ctx.mainTab = 'musea'))
  n17.$evtclick = _createInvoker(() => (_ctx.mainTab = 'davinci'))
  n18.$evtclick = _createInvoker(e => _ctx.copyEnvironmentInfo(e))
  n19.$evtclick = _createInvoker(e => _ctx.toggleTheme(e))
  _setInsertionState(n19)
  const n22 = _createIf(() => (_ctx.isDark), () => {
    const n24 = t0()
    return n24
  }, () => {
    const n26 = t1()
    return n26
  })
  _setInsertionState(n1)
  const n27 = _createIf(() => (_ctx.mainTab === 'patina'), () => {
    const _component_PatinaPlayground = _ctx.PatinaPlayground
    const n29 = _createComponentWithFallback(_component_PatinaPlayground, { compiler: () => (_ctx.compiler) }, null, true)
    return n29
  }, () => _createIf(() => (_ctx.mainTab === 'inspector'), () => {
    const _component_InspectorPlayground = _ctx.InspectorPlayground
    const n31 = _createComponentWithFallback(_component_InspectorPlayground, { compiler: () => (_ctx.compiler) }, null, true)
    return n31
  }, () => _createIf(() => (_ctx.mainTab === 'canon'), () => {
    const _component_TypeCheckPlayground = _ctx.TypeCheckPlayground
    const n34 = _createComponentWithFallback(_component_TypeCheckPlayground, { compiler: () => (_ctx.compiler) }, null, true)
    return n34
  }, () => _createIf(() => (_ctx.mainTab === 'croquis'), () => {
    const _component_CroquisPlayground = _ctx.CroquisPlayground
    const n37 = _createComponentWithFallback(_component_CroquisPlayground, { compiler: () => (_ctx.compiler) }, null, true)
    return n37
  }, () => _createIf(() => (_ctx.mainTab === 'cross-file'), () => {
    const _component_CrossFilePlayground = _ctx.CrossFilePlayground
    const n40 = _createComponentWithFallback(_component_CrossFilePlayground, { compiler: () => (_ctx.compiler) }, null, true)
    return n40
  }, () => _createIf(() => (_ctx.mainTab === 'musea'), () => {
    const _component_MuseaPlayground = _ctx.MuseaPlayground
    const n43 = _createComponentWithFallback(_component_MuseaPlayground, { compiler: () => (_ctx.compiler) }, null, true)
    return n43
  }, () => _createIf(() => (_ctx.mainTab === 'glyph'), () => {
    const _component_GlyphPlayground = _ctx.GlyphPlayground
    const n46 = _createComponentWithFallback(_component_GlyphPlayground, { compiler: () => (_ctx.compiler) }, null, true)
    return n46
  }, () => _createIf(() => (_ctx.mainTab === 'davinci'), () => {
    const _component_DavinciPlayground = _ctx.DavinciPlayground
    const n49 = _createComponentWithFallback(_component_DavinciPlayground, { compiler: () => (_ctx.compiler) }, null, true)
    return n49
  }, () => {
    const _component_AtelierPlayground = _ctx.AtelierPlayground
    const n52 = _createComponentWithFallback(_component_AtelierPlayground, { compiler: () => (_ctx.compiler) }, null, true)
    return n52
  }))))))))
  _renderEffect(() => {
    _setClass(n8, ['wasm-status', _ctx.wasmStatus])
    _setText(x8, _toDisplayString(_ctx.wasmStatus === "loading"
                  ? " (Loading...)"
                  : _ctx.wasmStatus === "mock"
                    ? " (Mock)"
                    : " (WASM)"))
    _setClass(n9, ['main-tab', { active: _ctx.mainTab === 'atelier' }])
    _setClass(n10, ['main-tab', { active: _ctx.mainTab === 'inspector' }])
    _setClass(n11, ['main-tab', { active: _ctx.mainTab === 'patina' }])
    _setClass(n12, ['main-tab', { active: _ctx.mainTab === 'glyph' }])
    _setClass(n13, ['main-tab', { active: _ctx.mainTab === 'canon' }])
    _setClass(n14, ['main-tab', { active: _ctx.mainTab === 'croquis' }])
    _setClass(n15, ['main-tab', { active: _ctx.mainTab === 'cross-file' }])
    _setClass(n16, ['main-tab', { active: _ctx.mainTab === 'musea' }])
    _setClass(n17, ['main-tab', { active: _ctx.mainTab === 'davinci' }])
    _setAttr(n21, "d", _ctx.mdiClipboardTextOutline, true)
    _setProp(n19, "title", _ctx.isDark ? 'Light mode' : 'Dark mode')
  })
  return n2
}
const __vaporRender = render

import { ref, computed, watch, onMounted, shallowRef, provide } from "vue";
import { mdiClipboardTextOutline } from "@mdi/js";
import { loadWasm } from "./wasm/index";
import AtelierPlayground from "./features/atelier/AtelierPlayground.vue";
import MuseaPlayground from "./features/musea/MuseaPlayground.vue";
import PatinaPlayground from "./features/patina/PatinaPlayground.vue";
import GlyphPlayground from "./features/glyph/GlyphPlayground.vue";
import CroquisPlayground from "./features/croquis/CroquisPlayground.vue";
import CrossFilePlayground from "./features/cross-file/CrossFilePlayground.vue";
import TypeCheckPlayground from "./features/canon/TypeCheckPlayground.vue";
import InspectorPlayground from "./features/inspector/InspectorPlayground.vue";
import DavinciPlayground from "./features/davinci/DavinciPlayground.vue";
import { getPlaygroundEnvironmentInfo } from "./utils/environment";
import { useClipboard } from "./utils/useClipboard";

// Main tab
type MainTab =
  | "atelier"
  | "inspector"
  | "patina"
  | "canon"
  | "croquis"
  | "cross-file"
  | "musea"
  | "glyph"
  | "davinci";


export default /*@__PURE__*/_defineVaporComponent({
  __name: 'App',
  render: __vaporRender,
  setup(__props, { emit: __emit, attrs: __attrs, slots: __slots }) {

// Theme toggle
const isDark = ref(false);
const currentTheme = computed<"dark" | "light">(() => (isDark.value ? "dark" : "light"));
provide("theme", currentTheme);
function toggleTheme() {
  isDark.value = !isDark.value;
  document.body.dataset.theme = isDark.value ? "dark" : "";
}
const vizeVersionLabel = \` v\${__VIZE_VERSION__}\`;
const { copyToClipboard } = useClipboard();
const validTabs: MainTab[] = [
  "atelier",
  "inspector",
  "patina",
  "canon",
  "croquis",
  "cross-file",
  "musea",
  "glyph",
  "davinci",
];
function getInitialTab(): MainTab {
  const params = new URLSearchParams(window.location.search);
  const tab = params.get("tab");
  if (tab && validTabs.includes(tab as MainTab)) {
    return tab as MainTab;
  }
  return "atelier";
}
const mainTab = ref<MainTab>(getInitialTab());
watch(mainTab, (newTab) => {
  const url = new URL(window.location.href);
  url.searchParams.set("tab", newTab);
  window.history.replaceState({}, "", url.toString());
});
// WASM
const wasmStatus = ref<"loading" | "ready" | "mock">("loading");
const compiler = shallowRef<Awaited<ReturnType<typeof loadWasm>> | null>(null);
function copyEnvironmentInfo() {
  copyToClipboard(
    getPlaygroundEnvironmentInfo({
      tab: mainTab.value,
      wasmStatus: wasmStatus.value,
    }),
  );
}
function updateVersionLabel() {
  document.getElementById("vize-playground-version")?.replaceChildren(vizeVersionLabel);
}
onMounted(async () => {
  updateVersionLabel();
  try {
    const loaded = await loadWasm();
    compiler.value = loaded;
    wasmStatus.value = "ready";
  } catch (e) {
    console.error("Failed to load WASM:", e);
  }
});

const __returned__ = { currentTheme, mainTab, watch, mdiClipboardTextOutline, AtelierPlayground, getPlaygroundEnvironmentInfo, useClipboard, updateVersionLabel, MuseaPlayground, loadWasm, validTabs, CrossFilePlayground, TypeCheckPlayground, DavinciPlayground, shallowRef, provide, CroquisPlayground, InspectorPlayground, copyToClipboard, ref, wasmStatus, copyEnvironmentInfo, isDark, toggleTheme, vizeVersionLabel, PatinaPlayground, GlyphPlayground, computed, onMounted, getInitialTab, compiler }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})"
`;

exports[`vite-plugin vapor options > emits Vapor template ref setters for DOM refs used by playground components 1`] = `
{
  "highlight": "import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { child as _child, next as _next, createTemplateRefSetter as _createTemplateRefSetter, setClass as _setClass, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';

const t0 = _template("<div data-v-2bad5e65 class=\\"line-numbers\\"></div>", true)
const t1 = _template("<div data-v-2bad5e65><!----><div data-v-2bad5e65 class=\\"code-content\\"></div></div>", true)

function render(_ctx, $props, $emit, $attrs, $slots) {
  const _setRef = _ctx.vaporTemplateRefSetter || _createTemplateRefSetter()
  const n1 = t1()
  const n2 = _child(n1)
  const n0 = _next(_child(n1), 1)
  _setInsertionState(n1, n2)
  const n3 = _createIf(() => (_ctx.props.showLineNumbers), () => {
    const n5 = t0()
    _setRef(n5, "lineNumbersEl")
    return n5
  })
  _setRef(n0, "codeContentEl")
  _renderEffect(() => _setClass(n1, ["code-highlight", { 'with-line-numbers': _ctx.props.showLineNumbers }]))
  return n1
}
const __vaporRender = render

import { useTemplateRef, watch } from "vue";
import {
  codeToThemedHtmlLines,
  normalizePlainHtmlLines,
  type CodeHighlightLanguage,
} from "./codeHighlighting";


export default /*@__PURE__*/_defineVaporComponent({
  __name: 'CodeHighlight',
  props: {
    code: { type: String, required: true },
    language: { type: null, required: true },
    showLineNumbers: { type: Boolean, required: false },
    theme: { type: String, required: false }
  },
  render: __vaporRender,
  setup(__props: any, { emit: __emit, attrs: __attrs, slots: __slots }) {

const props = __props;
const codeContentEl = useTemplateRef<HTMLDivElement>("codeContentEl");
const lineNumbersEl = useTemplateRef<HTMLDivElement>("lineNumbersEl");
let latestRenderId = 0;
function renderLineNumbers(count: number) {
  if (!lineNumbersEl.value) {
    return;
  }
  if (!props.showLineNumbers) {
    lineNumbersEl.value.innerHTML = "";
    return;
  }
  let html = "";
  for (let index = 0; index < count; index += 1) {
    html += \`<span class="line-number">\${index + 1}</span>\`;
  }
  lineNumbersEl.value.innerHTML = html;
}
function renderCodeLines(lines: string[]) {
  if (!codeContentEl.value) {
    return;
  }
  let html = "";
  for (const line of lines) {
    html += \`<div class="code-line">\${line}</div>\`;
  }
  codeContentEl.value.innerHTML = html;
  renderLineNumbers(lines.length);
}
async function highlight(renderId: number) {
  const nextLines = await codeToThemedHtmlLines(props.code, props.language);
  if (renderId !== latestRenderId) {
    return;
  }
  renderCodeLines(nextLines);
}
function render() {
  const renderId = ++latestRenderId;
  renderCodeLines(normalizePlainHtmlLines(props.code));
  void highlight(renderId);
}
function renderWhenReady() {
  if (!codeContentEl.value) {
    return;
  }
  if (props.showLineNumbers && !lineNumbersEl.value) {
    return;
  }
  render();
}
watch(
  [
    codeContentEl,
    lineNumbersEl,
    () => props.code,
    () => props.language,
    () => props.showLineNumbers,
  ],
  renderWhenReady,
  { immediate: true, flush: "post" },
);

const vaporTemplateRefSetter = _createTemplateRefSetter()
const __returned__ = { vaporTemplateRefSetter, codeToThemedHtmlLines, renderCodeLines, watch, latestRenderId, lineNumbersEl, render, useTemplateRef, props, renderLineNumbers, highlight, renderWhenReady, normalizePlainHtmlLines, codeContentEl }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})",
  "monaco": "import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { createTemplateRefSetter as _createTemplateRefSetter, template as _template } from 'vue';

const t0 = _template("<div data-v-3a9d3f90 class=\\"monaco-container\\"></div>", true)

function render(_ctx, $props, $emit, $attrs, $slots) {
  const _setRef = _ctx.vaporTemplateRefSetter || _createTemplateRefSetter()
  const n0 = t0()
  _setRef(n0, "containerRef")
  return n0
}
const __vaporRender = render

import "./MonacoEditor.css";
import { useTemplateRef, watch, onUnmounted, shallowRef, inject, type ComputedRef } from "vue";
import * as monaco from "monaco-editor";
import { configureMonaco, addVueCommentAction } from "./monacoConfig";
import {
  getScopeDecorationClass,
  offsetToPosition,
  getOverviewRulerColor,
  getScopeDecorationHoverMessage,
  type ScopeDecorationInfo,
} from "./scopeDecorations";

export interface Diagnostic {
  message: string;
  startLine: number;
  startColumn: number;
  endLine?: number;
  endColumn?: number;
  severity: "error" | "warning" | "info";
}
export interface ScopeDecoration extends ScopeDecorationInfo {}
/** A UTF-16 source range painted with \`className\` (provenance links). */
export interface EditorHighlight {
  start: number;
  end: number;
  className: string;
  /** Scroll the range into view when it appears. */
  reveal?: boolean;
}


export default /*@__PURE__*/_defineVaporComponent({
  __name: 'MonacoEditor',
  props: {
    modelValue: { type: String, required: true },
    language: { type: String, required: true },
    diagnostics: { type: Array, required: false },
    scopes: { type: Array, required: false },
    highlights: { type: Array, required: false },
    readOnly: { type: Boolean, required: false },
    theme: { type: String, required: false }
  },
  emits: ["update:modelValue", "cursor"],
  render: __vaporRender,
  setup(__props: any, { expose: __expose, emit: __emit, attrs: __attrs, slots: __slots }) {

const emit = __emit

const props = __props;
const containerRef = useTemplateRef<HTMLDivElement>("containerRef");
const editorInstance = shallowRef<monaco.editor.IStandaloneCodeEditor | null>(null);
const _injectedTheme = inject<ComputedRef<"dark" | "light">>("theme", undefined as any);
const resolvedTheme = () => _injectedTheme?.value ?? props.theme ?? "light";
let scopeDecorationIds: string[] = [];
let highlightDecorationIds: string[] = [];
function applyHighlights(highlights: EditorHighlight[] | undefined) {
  const editor = editorInstance.value;
  const model = editor?.getModel();
  if (!editor || !model) return;
  const decorations = (highlights ?? []).map((highlight) => {
    const start = offsetToPosition(model, highlight.start);
    const end = offsetToPosition(model, highlight.end);
    return {
      range: new monaco.Range(start.lineNumber, start.column, end.lineNumber, end.column),
      options: { className: highlight.className, isWholeLine: false },
    };
  });
  highlightDecorationIds = editor.deltaDecorations(highlightDecorationIds, decorations);
  const revealed = (highlights ?? []).findIndex((highlight) => highlight.reveal);
  if (revealed !== -1) {
    editor.revealRangeInCenterIfOutsideViewport(decorations[revealed].range);
  }
}
function applyScopeDecorations(scopes: ScopeDecoration[] | undefined) {
  if (!editorInstance.value) return;
  const model = editorInstance.value.getModel();
  if (!model) return;
  if (!scopes || scopes.length === 0) {
    scopeDecorationIds = editorInstance.value.deltaDecorations(scopeDecorationIds, []);
    return;
  }
  const newDecorations: monaco.editor.IModelDeltaDecoration[] = scopes.map((scope) => {
    const startPos = offsetToPosition(model, scope.start);
    const endPos = offsetToPosition(model, scope.end);
    const className = getScopeDecorationClass(scope.kind);
    return {
      range: new monaco.Range(
        startPos.lineNumber,
        startPos.column,
        endPos.lineNumber,
        endPos.column,
      ),
      options: {
        className,
        hoverMessage: getScopeDecorationHoverMessage(scope),
        isWholeLine: false,
        overviewRuler: {
          color: getOverviewRulerColor(scope.kind),
          position: monaco.editor.OverviewRulerLane.Right,
        },
      },
    };
  });
  scopeDecorationIds = editorInstance.value.deltaDecorations(scopeDecorationIds, newDecorations);
}
function applyDiagnostics(diagnostics: Diagnostic[] | undefined) {
  if (!editorInstance.value) return;
  const model = editorInstance.value.getModel();
  if (!model) return;
  if (!diagnostics || diagnostics.length === 0) {
    monaco.editor.setModelMarkers(model, "vize", []);
    return;
  }
  const markers: monaco.editor.IMarkerData[] = diagnostics.map((d) => ({
    severity:
      d.severity === "error"
        ? monaco.MarkerSeverity.Error
        : d.severity === "warning"
          ? monaco.MarkerSeverity.Warning
          : monaco.MarkerSeverity.Info,
    message: d.message,
    startLineNumber: d.startLine,
    startColumn: d.startColumn,
    endLineNumber: d.endLine ?? d.startLine,
    endColumn: d.endColumn ?? d.startColumn + 1,
  }));
  monaco.editor.setModelMarkers(model, "vize", markers);
}
function setValue(value: string) {
  if (editorInstance.value) {
    editorInstance.value.setValue(value);
  }
}
function mountEditor(container: HTMLDivElement) {
  if (editorInstance.value) {
    return;
  }
  configureMonaco();
  const editor = monaco.editor.create(container, {
    value: props.modelValue,
    language: props.language,
    theme: resolvedTheme() === "light" ? "vue-light" : "vue-dark",
    fontSize: 14,
    fontFamily: "'JetBrains Mono', monospace",
    minimap: { enabled: false },
    lineNumbers: "on",
    scrollBeyondLastLine: false,
    padding: { top: 16 },
    automaticLayout: true,
    quickSuggestions: !props.readOnly,
    suggestOnTriggerCharacters: !props.readOnly,
    readOnly: props.readOnly ?? false,
    domReadOnly: props.readOnly ?? false,
  });
  editorInstance.value = editor;
  // Store on DOM for vite-plugin-vize workaround (ref binding may fail)
  (container as any).__monacoEditor = editor;
  editor.onDidChangeModelContent(() => {
    const value = editor.getValue() || "";
    emit("update:modelValue", value);
  });
  editor.onDidChangeCursorPosition((event) => {
    const model = editor.getModel();
    if (model) emit("cursor", model.getOffsetAt(event.position));
  });
  if (props.language === "vue") {
    addVueCommentAction(editor);
  }
  if (props.scopes && props.scopes.length > 0) {
    applyScopeDecorations(props.scopes);
  }
  if (props.diagnostics && props.diagnostics.length > 0) {
    applyDiagnostics(props.diagnostics);
  }
  if (props.highlights && props.highlights.length > 0) {
    applyHighlights(props.highlights);
  }
}
watch(
  containerRef,
  (container) => {
    if (container) {
      mountEditor(container);
    }
  },
  { immediate: true, flush: "post" },
);
onUnmounted(() => {
  editorInstance.value?.dispose();
});
watch(
  () => props.modelValue,
  (newValue) => {
    if (editorInstance.value && editorInstance.value.getValue() !== newValue) {
      editorInstance.value.setValue(newValue);
    }
  },
);
watch(
  () => _injectedTheme?.value ?? props.theme,
  (newTheme) => {
    if (editorInstance.value) {
      monaco.editor.setTheme(newTheme === "light" ? "vue-light" : "vue-dark");
    }
  },
);
watch(
  () => props.language,
  (newLanguage) => {
    if (editorInstance.value) {
      const model = editorInstance.value.getModel();
      if (model) {
        monaco.editor.setModelLanguage(model, newLanguage);
      }
    }
  },
);
watch(
  () => props.diagnostics,
  (diagnostics) => {
    applyDiagnostics(diagnostics);
  },
  { immediate: true, deep: true },
);
watch(
  () => props.scopes,
  (scopes) => {
    applyScopeDecorations(scopes);
  },
  { immediate: true, deep: true },
);
watch(
  () => props.highlights,
  (highlights) => {
    applyHighlights(highlights);
  },
  { deep: true },
);
__expose({
  applyDiagnostics,
  applyScopeDecorations,
  setValue,
})

const vaporTemplateRefSetter = _createTemplateRefSetter()
const __returned__ = { vaporTemplateRefSetter, applyHighlights, scopeDecorationIds, inject, watch, configureMonaco, _injectedTheme, emit, mountEditor, useTemplateRef, getScopeDecorationClass, applyDiagnostics, getOverviewRulerColor, applyScopeDecorations, monaco, shallowRef, editorInstance, getScopeDecorationHoverMessage, props, onUnmounted, setValue, offsetToPosition, containerRef, addVueCommentAction, resolvedTheme, highlightDecorationIds }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})",
}
`;

exports[`vite-plugin vapor options > keeps Atelier output tabs reactive even when v-if siblings are present 1`] = `
"import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { createComponentWithFallback as _createComponentWithFallback, child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, setProp as _setProp, setStyle as _setStyle, applyCheckboxModel as _applyCheckboxModel, createInvoker as _createInvoker, delegateEvents as _delegateEvents, nthChild as _nthChild, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, createFor as _createFor, template as _template } from 'vue';

const t0 = _template("<div class=\\"panel input-panel\\"><div class=\\"panel-header\\"><h2> </h2><div class=\\"panel-actions\\"><button type=\\"button\\" class=\\"btn-ghost\\"> Reset </button><button type=\\"button\\" class=\\"btn-ghost\\">Copy</button></div></div><div class=\\"experimental-controls\\"></div><div class=\\"editor-container\\"></div></div>")
const t1 = _template("<span class=\\"compile-time\\"> ms</span>", true)
const t2 = _template("<button type=\\"button\\"> Bindings </button>", true)
const t3 = _template("<button type=\\"button\\"> SFC </button>")
const t4 = _template("<button type=\\"button\\"> CSS </button>")
const t5 = _template("<div class=\\"compiling\\"><div class=\\"spinner\\"></div><span>Compiling...</span></div>", true)
const t6 = _template("<div class=\\"wasm-error\\"><h3>Compilation Error</h3><pre> </pre></div>", true)
const t7 = _template("<button type=\\"button\\"> </button>")
const t8 = _template("<div class=\\"wasm-error\\"><h3>  Compilation Error</h3><pre> </pre></div>")
const t9 = _template("<pre> </pre>")
const t10 = _template("<div class=\\"wasm-warning\\"><h3>  Warnings ( ) </h3></div>")
const t11 = _template("<div class=\\"style-block\\"><span class=\\"style-meta\\"><span class=\\"badge\\">template  </span></span></div>")
const t12 = _template("<div class=\\"sfc-block\\"><p class=\\"section-label\\"> Template Fragments ( ) </p></div>")
const t13 = _template("<div class=\\"code-output\\"><div class=\\"code-header\\"><h4>  Output</h4><div class=\\"code-header-actions\\"><div class=\\"code-mode-toggle\\"></div><div class=\\"code-mode-toggle code-view-toggle\\"><button type=\\"button\\"> TS </button><button type=\\"button\\"> JS </button></div><button type=\\"button\\" class=\\"btn-ghost\\"> Copy </button></div></div></div>")
const t14 = _template("<div class=\\"ast-output\\"><div class=\\"ast-header\\"><h4>Abstract Syntax Tree</h4><div class=\\"ast-options\\"><label class=\\"ast-option\\"><input type=\\"checkbox\\"><span>Hide loc</span></label><label class=\\"ast-option\\"><input type=\\"checkbox\\"><span>Hide source</span></label><label class=\\"ast-option\\"><input type=\\"checkbox\\"><span>Compact</span></label><button type=\\"button\\" class=\\"btn-ghost btn-small\\"> Copy </button></div></div></div>")
const t15 = _template("<li class=\\"helper-item\\"><span class=\\"helper-name\\"> </span></li>")
const t16 = _template("<ul class=\\"helpers-list\\"></ul>")
const t17 = _template("<p class=\\"no-helpers\\">No runtime helpers needed</p>")
const t18 = _template("<div class=\\"helpers-output\\"><h4>Runtime Helpers Used ( )</h4></div>")
const t19 = _template("<div class=\\"sfc-block\\"><h5> Template  </h5></div>")
const t20 = _template("<div class=\\"sfc-block\\"><h5> Script Setup  </h5></div>")
const t21 = _template("<div class=\\"sfc-block\\"><h5> Script  </h5></div>")
const t22 = _template("<span class=\\"badge\\">scoped</span>")
const t23 = _template("<span class=\\"badge\\"> </span>")
const t24 = _template("<div class=\\"style-block\\"><span class=\\"style-meta\\"></span></div>")
const t25 = _template("<div class=\\"sfc-block\\"><h5>Styles ( )</h5></div>")
const t26 = _template("<div class=\\"sfc-output\\"><h4>SFC Descriptor</h4></div>")
const t27 = _template("<div class=\\"css-compiled\\"><h5>Compiled CSS</h5><div class=\\"code-actions\\"><button type=\\"button\\" class=\\"btn-ghost\\"> Copy </button></div></div>")
const t28 = _template("<li class=\\"helper-item\\"><span class=\\"helper-name\\"> </span></li>")
const t29 = _template("<div class=\\"css-vars\\"><h5>CSS Variables (v-bind)</h5><ul class=\\"helpers-list\\"></ul></div>")
const t30 = _template("<pre class=\\"error-message\\"> </pre>")
const t31 = _template("<div class=\\"css-errors\\"><h5>Errors</h5></div>")
const t32 = _template("<p class=\\"no-css\\">No styles in this SFC</p>")
const t33 = _template("<div class=\\"css-output\\"><h4>CSS Compilation (LightningCSS)</h4><div class=\\"css-options\\"><label class=\\"option checkbox\\"><input type=\\"checkbox\\"><span>Minify</span></label><label class=\\"option checkbox\\"><input type=\\"checkbox\\"><span>Force Scoped</span></label></div></div>")
const t34 = _template("<div class=\\"summary-card\\"><span class=\\"summary-count\\"> </span><span> </span></div>")
const t35 = _template("<span> </span>")
const t36 = _template("<div class=\\"binding-group\\"><div><span class=\\"group-icon\\"> </span><span class=\\"group-title\\"> </span><span class=\\"group-count\\"> </span></div><div class=\\"group-vars\\"></div></div>")
const t37 = _template("<div class=\\"bindings-output\\"><h4>Script Setup Bindings</h4><div class=\\"bindings-summary\\"></div><div class=\\"bindings-groups\\"></div></div>")
const t38 = _template("<div class=\\"bindings-output\\"><p class=\\"no-bindings\\">No bindings information available</p></div>")
const t39 = _template("<span class=\\"token-name\\"> </span>")
const t40 = _template("<span class=\\"token-value-text\\"> </span>")
const t41 = _template("<div class=\\"token-item\\"><span class=\\"token-badge\\"> </span><div class=\\"token-content\\"><div class=\\"token-main\\"></div><span class=\\"token-location\\"> : </span></div></div>")
const t42 = _template("<span class=\\"group-token-chip\\"> </span>")
const t43 = _template("<span class=\\"more-indicator\\"> +  more </span>")
const t44 = _template("<div class=\\"token-group\\"><div class=\\"group-header\\"><span class=\\"group-icon\\"> </span><span class=\\"group-title\\"> </span><span class=\\"group-count\\"> </span></div><div class=\\"group-tokens\\"></div></div>")
const t45 = _template("<div class=\\"tokens-output\\"><div class=\\"token-stats\\"><div class=\\"stat-card\\"><span class=\\"stat-value\\"> </span><span class=\\"stat-label\\">Total</span></div><div class=\\"stat-card\\"><span class=\\"stat-value\\"> </span><span class=\\"stat-label\\">Tags</span></div><div class=\\"stat-card\\"><span class=\\"stat-value\\"> </span><span class=\\"stat-label\\">Directives</span></div><div class=\\"stat-card\\"><span class=\\"stat-value\\"> </span><span class=\\"stat-label\\">Interpolations</span></div></div><h4>Token Stream</h4><div class=\\"token-stream\\"></div><h4>By Type</h4><div class=\\"token-groups\\"></div></div>")
const t46 = _template("<div class=\\"panel output-panel\\"><div class=\\"panel-header\\"><h2> Output </h2><div class=\\"tabs\\"><button type=\\"button\\"> Code </button><button type=\\"button\\"> AST </button><!----><button type=\\"button\\"> Tokens ( ) </button><button type=\\"button\\"> Helpers </button></div></div><div class=\\"output-content\\"></div></div>")
_delegateEvents("click")

function render(_ctx, $props, $emit, $attrs, $slots) {
  const n3 = t0()
  const n12 = t46()
  const n0 = _child(n3)
  const n4 = _child(n0)
  const n5 = _next(n4, 1)
  const n6 = _child(n5)
  const n7 = _next(n6, 1)
  const n1 = _next(n0, 1)
  const n2 = _next(n1, 2)
  const n10 = _child(n12)
  const n13 = _child(n10)
  const n14 = _next(n13, 1)
  const n18 = _child(n14)
  const n19 = _next(n18, 1)
  const n22 = _nthChild(n14, 2)
  const n20 = _nthChild(n14, 3)
  const n21 = _next(n20, 4)
  const n11 = _next(n10, 1)
  const x4 = _txt(n4)
  const x20 = _txt(n20)
  n6.$evtclick = _createInvoker(() => _ctx.handlePresetChange(_ctx.selectedPreset))
  n7.$evtclick = _createInvoker(() => _ctx.copyToClipboard(_ctx.source))
  const _component_ExperimentalFeatures = _ctx.ExperimentalFeatures
  _setInsertionState(n1)
  const n8 = _createComponentWithFallback(_component_ExperimentalFeatures, {
    modelValue: () => (_ctx.experimentals),
    "onUpdate:modelValue": () => (($event: any) => ((_ctx.experimentals) = $event)),
    scope: () => ("compiler"),
    onExample: () => (_ctx.loadExperimentalExample)
  }, null, true)
  const _component_MonacoEditor = _ctx.MonacoEditor
  _setInsertionState(n2)
  const n9 = _createComponentWithFallback(_component_MonacoEditor, {
    modelValue: () => (_ctx.source),
    "onUpdate:modelValue": () => (($event: any) => ((_ctx.source) = $event)),
    language: () => (_ctx.editorLanguage),
    theme: () => (_ctx.theme)
  }, null, true)
  _setInsertionState(n13, 1)
  const n15 = _createIf(() => (_ctx.compileTime !== null), () => {
    const n17 = t1()
    const x17 = _txt(n17)
    _renderEffect(() => _setText(x17, _toDisplayString(_ctx.compileTime.toFixed(4)) + "ms"))
    return n17
  })
  n18.$evtclick = _createInvoker(() => (_ctx.activeTab = 'code'))
  n19.$evtclick = _createInvoker(() => (_ctx.activeTab = 'ast'))
  _setInsertionState(n14, n22)
  const n23 = _createIf(() => (_ctx.inputMode === 'sfc'), () => {
    const n25 = t2()
    n25.$evtclick = _createInvoker(() => (_ctx.activeTab = 'bindings'))
    _renderEffect(() => _setClass(n25, ['tab', { active: _ctx.activeTab === 'bindings' }]))
    return n25
  })
  n20.$evtclick = _createInvoker(() => (_ctx.activeTab = 'tokens'))
  n21.$evtclick = _createInvoker(() => (_ctx.activeTab = 'helpers'))
  _setInsertionState(n14, 5)
  const n26 = _createIf(() => (_ctx.inputMode === 'sfc'), () => {
    const n28 = t3()
    const n29 = t4()
    n28.$evtclick = _createInvoker(() => (_ctx.activeTab = 'sfc'))
    n29.$evtclick = _createInvoker(() => (_ctx.activeTab = 'css'))
    _renderEffect(() => {
      _setClass(n28, ['tab', { active: _ctx.activeTab === 'sfc' }])
      _setClass(n29, ['tab', { active: _ctx.activeTab === 'css' }])
    })
    return [n28, n29]
  })
  _setInsertionState(n11)
  const n30 = _createIf(() => (_ctx.isCompiling), () => {
    const n32 = t5()
    return n32
  }, () => _createIf(() => (_ctx.error), () => {
    const n35 = t6()
    const n34 = _next(_child(n35), 1)
    const x34 = _txt(n34)
    _renderEffect(() => _setText(x34, _toDisplayString(_ctx.error)))
    return n35
  }, () => _createIf(() => (_ctx.output), () => {
    const n38 = _createIf(() => (_ctx.activeTab === 'code'), () => {
      const n41 = t13()
      const n40 = _child(n41)
      const n42 = _child(n40)
      const n43 = _next(n42, 1)
      const n44 = _child(n43)
      const n45 = _next(n44, 1)
      const n50 = _child(n45)
      const n51 = _next(n50, 1)
      const n46 = _next(n45, 2)
      const x42 = _txt(n42)
      _setInsertionState(n44)
      const n47 = _createFor(() => (_ctx.availableCodeOutputTargets), (_for_item0) => {
        const n49 = t7()
        const x49 = _txt(n49)
        n49.$evtclick = _createInvoker(() => (_ctx.codeOutputTarget = _for_item0.value))
        _renderEffect(() => {
          _setClass(n49, ['toggle-btn', { active: _ctx.codeOutputTarget === _for_item0.value }])
          _setText(x49, _toDisplayString(_ctx.CODE_OUTPUT_LABELS[_for_item0.value]))
        })
        return n49
      }, (target) => (target), 1)
      n50.$evtclick = _createInvoker(() => _ctx.activeCodeOutput.isTypeScript && (_ctx.codeViewMode = 'ts'))
      n51.$evtclick = _createInvoker(() => _ctx.activeCodeOutput.isTypeScript && (_ctx.codeViewMode = 'js'))
      n46.$evtclick = _createInvoker(() => _ctx.copyToClipboard(_ctx.activeCodeOutputText))
      _setInsertionState(n41, 1)
      const n52 = _createIf(() => (_ctx.activeCodeOutput.error), () => {
        const n56 = t8()
        const n54 = _child(n56)
        const n55 = _next(n54, 1)
        const x54 = _txt(n54)
        const x55 = _txt(n55)
        _renderEffect(() => {
          _setText(x54, _toDisplayString(_ctx.CODE_OUTPUT_LABELS[_ctx.codeOutputTarget]) + " Compilation Error")
          _setText(x55, _toDisplayString(_ctx.activeCodeOutput.error))
        })
        return n56
      }, () => {
        const n58 = _createIf(() => (_ctx.activeCodeOutput.warnings.length > 0), () => {
          const n61 = t10()
          const n60 = _child(n61)
          const x60 = _txt(n60)
          _setInsertionState(n61, 1)
          const n62 = _createFor(() => (_ctx.activeCodeOutput.warnings), (_for_item0, _for_key0) => {
            const n64 = t9()
            const x64 = _txt(n64)
            _renderEffect(() => _setText(x64, _toDisplayString(_for_item0.value)))
            return n64
          }, (warning, index) => (\`\${_ctx.codeOutputTarget}-warning-\${index}\`))
          _renderEffect(() => _setText(x60, _toDisplayString(_ctx.CODE_OUTPUT_LABELS[_ctx.codeOutputTarget]) + " Warnings (" + _toDisplayString(_ctx.activeCodeOutput.warnings.length) + ") "))
          return n61
        })
        const n65 = _createIf(() => (_ctx.activeCodeOutput.isTypeScript && _ctx.codeViewMode === 'js'), () => {
          const _component_CodeHighlight = _ctx.CodeHighlight
          const n67 = _createComponentWithFallback(_component_CodeHighlight, {
    code: () => (_ctx.activeCodeOutput.formattedJsCode),
    language: () => ("javascript"),
    theme: () => (_ctx.theme),
    "show-line-numbers": () => ("")
  }, null, true)
          return n67
        }, () => {
          const _component_CodeHighlight = _ctx.CodeHighlight
          const n69 = _createComponentWithFallback(_component_CodeHighlight, {
    code: () => (_ctx.activeCodeOutput.formattedCode || _ctx.activeCodeOutput.code),
    language: () => (_ctx.activeCodeOutput.isTypeScript ? 'typescript' : 'javascript'),
    theme: () => (_ctx.theme),
    "show-line-numbers": () => ("")
  }, null, true)
          return n69
        })
        const n70 = _createIf(() => (_ctx.activeCodeOutput.templates.length > 0 &&
                _ctx.codeOutputTarget !== 'vapor' &&
                _ctx.codeOutputTarget !== 'vaporSsr'), () => {
          const n73 = t12()
          const n72 = _child(n73)
          const x72 = _txt(n72)
          _setInsertionState(n73, 1)
          const n74 = _createFor(() => (_ctx.activeCodeOutput.templates), (_for_item0, _for_key0) => {
            const n78 = t11()
            const n76 = _child(n78)
            const n79 = _child(n76)
            const x79 = _txt(n79)
            const _component_CodeHighlight = _ctx.CodeHighlight
            _setInsertionState(n78, 1)
            const n77 = _createComponentWithFallback(_component_CodeHighlight, {
    code: () => (_for_item0.value),
    language: () => ("javascript"),
    theme: () => (_ctx.theme),
    "show-line-numbers": () => ("")
  }, null, true)
            _renderEffect(() => _setText(x79, "template " + _toDisplayString(_for_key0.value + 1)))
            return n78
          }, (template, index) => (\`\${_ctx.codeOutputTarget}-\${index}\`))
          _renderEffect(() => _setText(x72, " Template Fragments (" + _toDisplayString(_ctx.activeCodeOutput.templates.length) + ") "))
          return n73
        })
        return [n58, n65, n70]
      })
      _renderEffect(() => {
        _setText(x42, _toDisplayString(_ctx.CODE_OUTPUT_LABELS[_ctx.codeOutputTarget]) + " Output")
        _setClass(n50, ['toggle-btn', { active: _ctx.codeViewMode === 'ts' }])
        _setProp(n50, "disabled", !_ctx.activeCodeOutput.isTypeScript)
        _setClass(n51, ['toggle-btn', { active: _ctx.codeViewMode === 'js' }])
        _setProp(n51, "disabled", !_ctx.activeCodeOutput.isTypeScript)
      })
      return n41
    }, () => _createIf(() => (_ctx.activeTab === 'ast'), () => {
      const n83 = t14()
      const n81 = _child(n83)
      const n84 = _next(_child(n81), 1)
      const n85 = _child(n84)
      const n89 = _child(n85)
      const n86 = _next(n85, 1)
      const n90 = _child(n86)
      const n87 = _next(n86, 2)
      const n91 = _child(n87)
      const n88 = _next(n87, 3)
      _applyCheckboxModel(n89, () => (_ctx.astHideLoc), _value => (_ctx.astHideLoc = _value))
      _applyCheckboxModel(n90, () => (_ctx.astHideSource), _value => (_ctx.astHideSource = _value))
      _applyCheckboxModel(n91, () => (_ctx.astCollapsed), _value => (_ctx.astCollapsed = _value))
      n88.$evtclick = _createInvoker(() => _ctx.copyToClipboard(_ctx.astJson))
      const _component_CodeHighlight = _ctx.CodeHighlight
      _setInsertionState(n83, 1)
      const n82 = _createComponentWithFallback(_component_CodeHighlight, {
    code: () => (_ctx.astJson),
    language: () => ("json"),
    theme: () => (_ctx.theme),
    "show-line-numbers": () => ("")
  }, null, true)
      return n83
    }, () => _createIf(() => (_ctx.activeTab === 'helpers'), () => {
      const n95 = t18()
      const n94 = _child(n95)
      const x94 = _txt(n94)
      _setInsertionState(n95, 1)
      const n96 = _createIf(() => (_ctx.output.helpers?.length > 0), () => {
        const n98 = t16()
        _setInsertionState(n98)
        const n99 = _createFor(() => (_ctx.output.helpers), (_for_item0) => {
          const n102 = t15()
          const n101 = _child(n102)
          const x101 = _txt(n101)
          _renderEffect(() => _setText(x101, _toDisplayString(_for_item0.value)))
          return n102
        }, (helper) => (helper), 1)
        return n98
      }, () => {
        const n104 = t17()
        return n104
      })
      _renderEffect(() => _setText(x94, "Runtime Helpers Used (" + _toDisplayString(_ctx.output.helpers?.length ?? 0) + ")"))
      return n95
    }, () => _createIf(() => (_ctx.activeTab === 'sfc' && _ctx.sfcResult), () => {
      const n107 = t26()
      _setInsertionState(n107, 1)
      const n108 = _createIf(() => (_ctx.sfcResult.descriptor.template), () => {
        const n112 = t19()
        const n110 = _child(n112)
        const x110 = _txt(n110)
        const _component_CodeHighlight = _ctx.CodeHighlight
        _setInsertionState(n112, 1)
        const n111 = _createComponentWithFallback(_component_CodeHighlight, {
    code: () => (_ctx.sfcResult.descriptor.template.content),
    language: () => ("html"),
    theme: () => (_ctx.theme)
  }, null, true)
        _renderEffect(() => _setText(x110, " Template " + _toDisplayString(_ctx.sfcResult.descriptor.template.lang ? \`(\${_ctx.sfcResult.descriptor.template.lang})\` : "")))
        return n112
      })
      _setInsertionState(n107, 2)
      const n113 = _createIf(() => (_ctx.sfcResult.descriptor.scriptSetup), () => {
        const n117 = t20()
        const n115 = _child(n117)
        const x115 = _txt(n115)
        const _component_CodeHighlight = _ctx.CodeHighlight
        _setInsertionState(n117, 1)
        const n116 = _createComponentWithFallback(_component_CodeHighlight, {
    code: () => (_ctx.sfcResult.descriptor.scriptSetup.content),
    language: () => ("typescript"),
    theme: () => (_ctx.theme)
  }, null, true)
        _renderEffect(() => _setText(x115, " Script Setup " + _toDisplayString(_ctx.sfcResult.descriptor.scriptSetup.lang
                  ? \`(\${_ctx.sfcResult.descriptor.scriptSetup.lang})\`
                  : "")))
        return n117
      })
      _setInsertionState(n107, 3)
      const n118 = _createIf(() => (_ctx.sfcResult.descriptor.script), () => {
        const n122 = t21()
        const n120 = _child(n122)
        const x120 = _txt(n120)
        const _component_CodeHighlight = _ctx.CodeHighlight
        _setInsertionState(n122, 1)
        const n121 = _createComponentWithFallback(_component_CodeHighlight, {
    code: () => (_ctx.sfcResult.descriptor.script.content),
    language: () => ("typescript"),
    theme: () => (_ctx.theme)
  }, null, true)
        _renderEffect(() => _setText(x120, " Script " + _toDisplayString(_ctx.sfcResult.descriptor.script.lang ? \`(\${_ctx.sfcResult.descriptor.script.lang})\` : "")))
        return n122
      })
      _setInsertionState(n107, 4)
      const n123 = _createIf(() => (_ctx.sfcResult.descriptor.styles?.length > 0), () => {
        const n126 = t25()
        const n125 = _child(n126)
        const x125 = _txt(n125)
        _setInsertionState(n126, 1)
        const n127 = _createFor(() => (_ctx.sfcResult.descriptor.styles), (_for_item0) => {
          const n131 = t24()
          const n129 = _child(n131)
          _setInsertionState(n129)
          const n132 = _createIf(() => (_for_item0.value.scoped), () => {
            const n134 = t22()
            return n134
          })
          _setInsertionState(n129, 1)
          const n135 = _createIf(() => (_for_item0.value.lang), () => {
            const n137 = t23()
            const x137 = _txt(n137)
            _renderEffect(() => _setText(x137, _toDisplayString(_for_item0.value.lang)))
            return n137
          })
          const _component_CodeHighlight = _ctx.CodeHighlight
          _setInsertionState(n131, 1)
          const n130 = _createComponentWithFallback(_component_CodeHighlight, {
    code: () => (_for_item0.value.content),
    language: () => ("css"),
    theme: () => (_ctx.theme)
  }, null, true)
          return n131
        }, (style) => (style.loc.start))
        _renderEffect(() => _setText(x125, "Styles (" + _toDisplayString(_ctx.sfcResult.descriptor.styles?.length) + ")"))
        return n126
      })
      return n107
    }, () => _createIf(() => (_ctx.activeTab === 'css'), () => {
      const n141 = t33()
      const n140 = _next(_child(n141), 1)
      const n142 = _child(n140)
      const n144 = _child(n142)
      const n143 = _next(n142, 1)
      const n145 = _child(n143)
      _applyCheckboxModel(n144, () => (_ctx.cssOptions.minify), _value => (_ctx.cssOptions.minify = _value))
      _applyCheckboxModel(n145, () => (_ctx.cssOptions.scoped), _value => (_ctx.cssOptions.scoped = _value))
      _setInsertionState(n141, 2)
      const n146 = _createIf(() => (_ctx.cssResult), () => {
        const n150 = t27()
        const n148 = _next(_child(n150), 1)
        const n151 = _child(n148)
        n151.$evtclick = _createInvoker(() => _ctx.copyToClipboard(_ctx.formattedCss || _ctx.cssResult.code))
        const _component_CodeHighlight = _ctx.CodeHighlight
        _setInsertionState(n150, 2)
        const n149 = _createComponentWithFallback(_component_CodeHighlight, {
    code: () => (_ctx.formattedCss || _ctx.cssResult.code),
    language: () => ("css"),
    theme: () => (_ctx.theme),
    "show-line-numbers": () => ("")
  }, null, true)
        const n152 = _createIf(() => (_ctx.cssResult.cssVars?.length > 0), () => {
          const n155 = t29()
          const n154 = _next(_child(n155), 1)
          _setInsertionState(n154)
          const n156 = _createFor(() => (_ctx.cssResult.cssVars), (_for_item0) => {
            const n159 = t28()
            const n158 = _child(n159)
            const x158 = _txt(n158)
            _renderEffect(() => _setText(x158, _toDisplayString(_for_item0.value)))
            return n159
          }, (v) => (v), 1)
          return n155
        })
        const n160 = _createIf(() => (_ctx.cssResult.errors?.length > 0), () => {
          const n162 = t31()
          _setInsertionState(n162, 1)
          const n163 = _createFor(() => (_ctx.cssResult.errors), (_for_item0) => {
            const n165 = t30()
            const x165 = _txt(n165)
            _renderEffect(() => _setText(x165, _toDisplayString(_for_item0.value)))
            return n165
          }, (err) => (err))
          return n162
        })
        return [n150, n152, n160]
      }, () => {
        const n167 = t32()
        return n167
      })
      return n141
    }, () => _createIf(() => (_ctx.activeTab === 'bindings' && _ctx.sfcResult?.script?.bindings), () => {
      const n172 = t37()
      const n170 = _next(_child(n172), 1)
      const n171 = _next(n170, 2)
      _setInsertionState(n170)
      const n173 = _createFor(() => (_ctx.bindingsSummary), (_for_item0, _for_key0) => {
        const n177 = t34()
        const n175 = _child(n177)
        const n176 = _next(n175, 1)
        const x175 = _txt(n175)
        const x176 = _txt(n176)
        _renderEffect(() => {
          _setText(x175, _toDisplayString(_for_item0.value))
          _setClass(n176, ['summary-type', \`type-\${_for_key0.value}\`])
          _setText(x176, _toDisplayString(_for_key0.value))
        })
        return n177
      }, (count, type) => (type), 1)
      _setInsertionState(n171)
      const n178 = _createFor(() => (_ctx.groupedBindings), (_for_item0, _for_key0) => {
        const n182 = t36()
        const n180 = _child(n182)
        const n183 = _child(n180)
        const n184 = _next(n183, 1)
        const n185 = _next(n184, 2)
        const n181 = _next(n180, 1)
        const x183 = _txt(n183)
        const x184 = _txt(n184)
        const x185 = _txt(n185)
        _setInsertionState(n181)
        const n186 = _createFor(() => (_for_item0.value), (_for_item1) => {
          const n188 = t35()
          const x188 = _txt(n188)
          _renderEffect(() => {
            _setClass(n188, ['var-chip', \`type-\${_for_key0.value}\`])
            _setText(x188, _toDisplayString(_for_item1.value))
          })
          return n188
        }, (v) => (v), 1)
        _renderEffect(() => {
          _setClass(n180, ['group-header', \`type-\${_for_key0.value}\`])
          _setText(x183, _toDisplayString(_ctx.getBindingIcon(_for_key0.value as string)))
          _setText(x184, _toDisplayString(_ctx.getBindingLabel(_for_key0.value as string)))
          _setText(x185, _toDisplayString(_for_item0.value.length))
        })
        return n182
      }, (vars, type) => (type), 1)
      return n172
    }, () => _createIf(() => (_ctx.activeTab === 'bindings'), () => {
      const n191 = t38()
      return n191
    }, () => _createIf(() => (_ctx.activeTab === 'tokens'), () => {
      const n197 = t45()
      const n194 = _child(n197)
      const n198 = _child(n194)
      const n202 = _child(n198)
      const n199 = _next(n198, 1)
      const n203 = _child(n199)
      const n200 = _next(n199, 2)
      const n204 = _child(n200)
      const n201 = _next(n200, 3)
      const n205 = _child(n201)
      const n195 = _nthChild(n197, 2)
      const n196 = _nthChild(n197, 4)
      const x202 = _txt(n202)
      const x203 = _txt(n203)
      const x204 = _txt(n204)
      const x205 = _txt(n205)
      _setInsertionState(n195)
      const n206 = _createFor(() => (_ctx.lexicalTokens), (_for_item0) => {
        const n210 = t41()
        const n208 = _child(n210)
        const n209 = _next(n208, 1)
        const n211 = _child(n209)
        const n212 = _next(n211, 1)
        const x208 = _txt(n208)
        const x212 = _txt(n212)
        _setInsertionState(n211)
        const n213 = _createIf(() => (_for_item0.value.name), () => {
          const n215 = t39()
          const x215 = _txt(n215)
          _renderEffect(() => _setText(x215, _toDisplayString(_for_item0.value.name)))
          return n215
        })
        _setInsertionState(n211, 1)
        const n216 = _createIf(() => (_for_item0.value.value), () => {
          const n218 = t40()
          const x218 = _txt(n218)
          _renderEffect(() => _setText(x218, _toDisplayString(_for_item0.value.value)))
          return n218
        })
        _renderEffect(() => {
          _setStyle(n210, { '--token-color': _ctx.getTokenTypeColor(_for_item0.value.type) })
          _setStyle(n208, { background: _ctx.getTokenTypeColor(_for_item0.value.type) })
          _setText(x208, _toDisplayString(_ctx.getTokenTypeIcon(_for_item0.value.type)))
          _setText(x212, _toDisplayString(_for_item0.value.line) + ":" + _toDisplayString(_for_item0.value.column))
        })
        return n210
      }, (token) => (\`\${token.line}:\${token.column}:\${token.type}\`), 1)
      _setInsertionState(n196)
      const n219 = _createFor(() => (_ctx.tokensByType), (_for_item0, _for_key0) => {
        const n221 = _createIf(() => (_for_item0.value.length > 0), () => {
          const n225 = t44()
          const n223 = _child(n225)
          const n226 = _child(n223)
          const n227 = _next(n226, 1)
          const n228 = _next(n227, 2)
          const n224 = _next(n223, 1)
          const x226 = _txt(n226)
          const x227 = _txt(n227)
          const x228 = _txt(n228)
          _setInsertionState(n224)
          const n229 = _createFor(() => (_for_item0.value.slice(0, 12)), (_for_item1) => {
            const n231 = t42()
            const x231 = _txt(n231)
            _renderEffect(() => {
              _setStyle(n231, {
                      '--chip-color': _ctx.getTokenTypeColor(String(_for_key0.value)),
                    })
              _setText(x231, _toDisplayString(_for_item1.value.name || _for_item1.value.value?.slice(0, 25) || _for_item1.value.raw.slice(0, 25)))
            })
            return n231
          }, (token) => (\`\${token.line}:\${token.column}:\${token.type}\`))
          _setInsertionState(n224, 1)
          const n232 = _createIf(() => (_for_item0.value.length > 12), () => {
            const n234 = t43()
            const x234 = _txt(n234)
            _renderEffect(() => _setText(x234, " +" + _toDisplayString(_for_item0.value.length - 12) + " more "))
            return n234
          })
          _renderEffect(() => {
            _setStyle(n223, {
                    borderLeftColor: _ctx.getTokenTypeColor(String(_for_key0.value)),
                  })
            _setStyle(n226, {
                      background: _ctx.getTokenTypeColor(String(_for_key0.value)),
                    })
            _setText(x226, _toDisplayString(_ctx.getTokenTypeIcon(String(_for_key0.value))))
            _setText(x227, _toDisplayString(_ctx.getTokenTypeLabel(String(_for_key0.value))))
            _setText(x228, _toDisplayString(_for_item0.value.length))
          })
          return n225
        })
        return n221
      }, (tokens, type) => (type), 1)
      _renderEffect(() => {
        _setText(x202, _toDisplayString(_ctx.tokenStats.total))
        _setText(x203, _toDisplayString(_ctx.tokenStats.tags))
        _setText(x204, _toDisplayString(_ctx.tokenStats.directives))
        _setText(x205, _toDisplayString(_ctx.tokenStats.interpolations))
      })
      return n197
    }))))))))
    return n38
  })))
  _renderEffect(() => {
    _setText(x4, _toDisplayString(_ctx.inputMode === "sfc" ? "SFC (.vue)" : "Template"))
    _setClass(n18, ['tab', { active: _ctx.activeTab === 'code' }])
    _setClass(n19, ['tab', { active: _ctx.activeTab === 'ast' }])
    _setClass(n20, ['tab', { active: _ctx.activeTab === 'tokens' }])
    _setText(x20, " Tokens (" + _toDisplayString(_ctx.tokenStats.total) + ") ")
    _setClass(n21, ['tab', { active: _ctx.activeTab === 'helpers' }])
  })
  return [n3, n12]
}
const __vaporRender = render

import { computed, watch } from "vue";
import ExperimentalFeatures from "../../shared/ExperimentalFeatures.vue";
import { useCompilerInit } from "../../utils/useCompilerInit";
import MonacoEditor from "../../shared/MonacoEditor.vue";
import CodeHighlight from "../../shared/CodeHighlight.vue";
import { useTheme } from "../../utils/useTheme";
import { useClipboard } from "../../utils/useClipboard";
import { useAtelierCompiler } from "./useAtelierCompiler";
import { CODE_OUTPUT_LABELS } from "./codeOutputs";
import {
  useTokenAnalysis,
  getTokenTypeIcon,
  getTokenTypeLabel,
  getTokenTypeColor,
} from "./useTokenAnalysis";
import { getBindingIcon, getBindingLabel } from "./bindingHelpers";
import { type loadWasm, getWasm } from "../../wasm/index";


export default /*@__PURE__*/_defineVaporComponent({
  __name: 'AtelierPlayground',
  props: {
    compiler: { type: null, required: true }
  },
  render: __vaporRender,
  setup(__props: any, { emit: __emit, attrs: __attrs, slots: __slots }) {

const props = __props;
const { theme } = useTheme();
const { copyToClipboard } = useClipboard();
const {
  experimentals,
  loadExample,
  inputMode,
  source,
  output,
  sfcResult,
  error,
  activeTab,
  isCompiling,
  selectedPreset,
  compileTime,
  cssResult,
  cssOptions,
  formattedCss,
  codeViewMode,
  codeOutputTarget,
  availableCodeOutputTargets,
  codeOutputVersion,
  activeCodeOutput,
  astHideLoc,
  astHideSource,
  astCollapsed,
  editorLanguage,
  astJson,
  bindingsSummary,
  groupedBindings,
  compile,
  handlePresetChange,
} = useAtelierCompiler(() => props.compiler ?? getWasm());
const { lexicalTokens, tokensByType, tokenStats } = useTokenAnalysis(source);
const activeCodeOutputText = computed(() => {
  const code =
    activeCodeOutput.value.isTypeScript && codeViewMode.value === "js"
      ? activeCodeOutput.value.formattedJsCode
      : activeCodeOutput.value.formattedCode || activeCodeOutput.value.code;
  return activeCodeOutput.value.error || code;
});
const activeCodeHighlightKey = computed(
  () => \`\${codeOutputVersion.value}:\${codeOutputTarget.value}:\${codeViewMode.value}\`,
);
watch(
  () => props.compiler,
  () => {
    if (props.compiler) compile();
  },
  { immediate: true },
);
useCompilerInit(compile);
function loadExperimentalExample(key: string) {
  inputMode.value = "sfc";
  activeTab.value = "code";
  loadExample(key);
}

const __returned__ = { inputMode, tokensByType, handlePresetChange, isCompiling, loadExample, CODE_OUTPUT_LABELS, watch, ExperimentalFeatures, useClipboard, getBindingLabel, cssResult, cssOptions, compileTime, codeOutputTarget, useCompilerInit, activeTab, getWasm, availableCodeOutputTargets, astCollapsed, editorLanguage, lexicalTokens, experimentals, astJson, useAtelierCompiler, activeCodeOutput, compile, activeCodeHighlightKey, astHideSource, getBindingIcon, MonacoEditor, source, selectedPreset, tokenStats, getTokenTypeIcon, getTokenTypeLabel, astHideLoc, bindingsSummary, copyToClipboard, error, codeOutputVersion, getTokenTypeColor, sfcResult, useTokenAnalysis, theme, props, activeCodeOutputText, loadExperimentalExample, computed, useTheme, CodeHighlight, output, codeViewMode, groupedBindings, formattedCss }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})"
`;

exports[`vite-plugin vapor options > keeps Tres-style custom renderer intrinsics as elements around imported lowercase components 1`] = `
"import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { createComponentWithFallback as _createComponentWithFallback, setInsertionState as _setInsertionState, createIf as _createIf, template as _template } from 'vue';

const t0 = _template("<group></group>", true)
const t1 = _template("<mesh></mesh>", true)

function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t1()
  _setInsertionState(n0)
  const n1 = _createIf(() => (_ctx.visible), () => {
    const n4 = t0()
    const _component_primitive = _ctx.Primitive
    _setInsertionState(n4)
    const n3 = _createComponentWithFallback(_component_primitive, null, null, true)
    return n4
  })
  return n0
}
const __vaporRender = render

import { Primitive } from "@tresjs/core";

const visible = true;

export default /*@__PURE__*/_defineVaporComponent({
  __name: 'TresCustomRenderer',
  render: __vaporRender,
  setup(__props, { emit: __emit, attrs: __attrs, slots: __slots }) {


const __returned__ = { visible, Primitive }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})"
`;

exports[`vite-plugin vapor options > keeps v-for aliases inside Vapor v-html expressions 1`] = `
"import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { createComponentWithFallback as _createComponentWithFallback, child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, setProp as _setProp, setAttr as _setAttr, applyTextModel as _applyTextModel, applySelectModel as _applySelectModel, createInvoker as _createInvoker, delegateEvents as _delegateEvents, nthChild as _nthChild, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, createFor as _createFor, template as _template } from 'vue';

const t0 = _template("<span class=\\"perf-badge\\"> ms </span>", true)
const t1 = _template("<span class=\\"count-badge errors\\"> </span>")
const t2 = _template("<span class=\\"count-badge warnings\\"> </span>")
const t3 = _template("<span class=\\"tab-badge\\"> </span>", true)
const t4 = _template("<div class=\\"error-panel\\"><div class=\\"error-header\\">Lint Error</div><pre class=\\"error-content\\"> </pre></div>", true)
const t5 = _template("<option> </option>")
const t6 = _template("<div class=\\"success-state\\"><svg class=\\"success-icon\\" viewBox=\\"0 0 24 24\\"><path fill=\\"currentColor\\"></path></svg><span>No issues found</span></div>")
const t7 = _template("<div class=\\"diagnostic-help\\"><div class=\\"help-header\\"><span class=\\"help-icon\\">?</span><span class=\\"help-label\\">Hint</span></div><div class=\\"help-content\\"></div></div>")
const t8 = _template("<div><div class=\\"diagnostic-header\\"><svg class=\\"severity-icon\\" viewBox=\\"0 0 24 24\\"><path fill=\\"currentColor\\"></path></svg><code class=\\"rule-id\\"> </code><span class=\\"location-badge\\"> : </span></div><div class=\\"diagnostic-message\\"> </div></div>")
const t9 = _template("<div class=\\"diagnostics-list\\"></div>")
const t10 = _template("<div class=\\"diagnostics-output\\"><div class=\\"output-header-bar\\"><span class=\\"output-title\\">Issues</span><div class=\\"locale-selector\\"><select aria-label=\\"Locale\\"></select></div></div></div>")
const t11 = _template("<option> </option>")
const t12 = _template("<div class=\\"category-toggle\\"><label class=\\"toggle-label\\"><input type=\\"checkbox\\" class=\\"rule-checkbox\\"><span class=\\"category-label\\"> </span><span class=\\"category-count\\">  rules</span></label></div>")
const t13 = _template("<span class=\\"badge fixable-badge\\">fix</span>")
const t14 = _template("<div><div class=\\"rule-main\\"><label class=\\"rule-toggle\\"><input type=\\"checkbox\\" class=\\"rule-checkbox\\"><code class=\\"rule-id\\"> </code></label><div class=\\"rule-badges\\"><span class=\\"badge category-badge\\"> </span><span> </span></div></div><div class=\\"rule-description\\"> </div></div>")
const t15 = _template("<div class=\\"empty-state\\"> No rules match your search </div>")
const t16 = _template("<div class=\\"rules-output\\"><div class=\\"output-header-bar\\"><span class=\\"output-title\\">Rule Configuration</span><div class=\\"rules-actions\\"><div class=\\"preset-actions\\" role=\\"group\\" aria-label=\\"Lint preset\\"><button type=\\"button\\"> General Recommended </button><button type=\\"button\\"> Opinionated </button></div><button type=\\"button\\" class=\\"btn-action\\">Enable All</button><button type=\\"button\\" class=\\"btn-action\\"> Disable All </button></div></div><div class=\\"rules-toolbar\\"><input type=\\"text\\" placeholder=\\"Search rules...\\" aria-label=\\"Search rules\\" class=\\"search-input\\"><select aria-label=\\"Category filter\\" class=\\"category-select\\"></select></div><!----><div class=\\"rules-list\\"></div></div>")
const t17 = _template("<div class=\\"loading-state\\"><span>Enter Vue code to see lint results</span></div>", true)
const t18 = _template("<div class=\\"patina-playground\\"><div class=\\"panel input-panel\\"><div class=\\"panel-header\\"><div class=\\"header-title\\"><svg class=\\"icon\\" viewBox=\\"0 0 24 24\\"><path fill=\\"currentColor\\"></path></svg><h2>Source</h2></div><div class=\\"panel-actions\\"><button type=\\"button\\" class=\\"btn-ghost\\"> Reset </button></div></div><div class=\\"editor-container\\"></div></div><div class=\\"panel output-panel\\"><div class=\\"panel-header\\"><div class=\\"header-title\\"><svg class=\\"icon\\" viewBox=\\"0 0 24 24\\"><path fill=\\"currentColor\\"></path></svg><h2>Lint Analysis</h2></div><div class=\\"tabs\\"><button type=\\"button\\"> Diagnostics </button><button type=\\"button\\"> Rules <span class=\\"tab-count\\"> / </span></button></div></div><div class=\\"output-content\\"></div></div></div>", true)
_delegateEvents("change")
_delegateEvents("click")

function render(_ctx, $props, $emit, $attrs, $slots) {
  const n2 = t18()
  const n0 = _child(n2)
  const n3 = _child(n0)
  const n5 = _child(n3)
  const n7 = _child(n5)
  const n8 = _child(n7)
  const n6 = _next(n5, 1)
  const n9 = _child(n6)
  const n4 = _next(n3, 1)
  const n1 = _next(n0, 1)
  const n11 = _child(n1)
  const n13 = _child(n11)
  const n15 = _child(n13)
  const n16 = _child(n15)
  const n14 = _next(n13, 1)
  const n28 = _child(n14)
  const n29 = _next(n28, 1)
  const n33 = _next(_child(n29), 1)
  const n12 = _next(n11, 1)
  const x33 = _txt(n33)
  n9.$evtclick = _createInvoker(() => (_ctx.source = _ctx.LINT_PRESET))
  const _component_MonacoEditor = _ctx.MonacoEditor
  _setInsertionState(n4)
  const n10 = _createComponentWithFallback(_component_MonacoEditor, {
    ref: () => ("editorRef"),
    modelValue: () => (_ctx.source),
    "onUpdate:modelValue": () => (($event: any) => ((_ctx.source) = $event)),
    language: () => ("vue"),
    diagnostics: () => (_ctx.diagnostics),
    theme: () => (_ctx.theme)
  }, null, true)
  _setInsertionState(n13, 2)
  const n17 = _createIf(() => (_ctx.lintTime !== null), () => {
    const n19 = t0()
    const x19 = _txt(n19)
    _renderEffect(() => _setText(x19, _toDisplayString(_ctx.lintTime.toFixed(2)) + "ms "))
    return n19
  })
  _setInsertionState(n13, 3)
  const n20 = _createIf(() => (_ctx.lintResult), () => {
    const n22 = _createIf(() => (_ctx.errorCount > 0), () => {
      const n24 = t1()
      const x24 = _txt(n24)
      _renderEffect(() => _setText(x24, _toDisplayString(_ctx.errorCount)))
      return n24
    })
    const n25 = _createIf(() => (_ctx.warningCount > 0), () => {
      const n27 = t2()
      const x27 = _txt(n27)
      _renderEffect(() => _setText(x27, _toDisplayString(_ctx.warningCount)))
      return n27
    })
    return [n22, n25]
  })
  n28.$evtclick = _createInvoker(() => (_ctx.activeTab = 'diagnostics'))
  _setInsertionState(n28, 1)
  const n30 = _createIf(() => (_ctx.lintResult?.diagnostics.length), () => {
    const n32 = t3()
    const x32 = _txt(n32)
    _renderEffect(() => _setText(x32, _toDisplayString(_ctx.lintResult.diagnostics.length)))
    return n32
  })
  n29.$evtclick = _createInvoker(() => (_ctx.activeTab = 'rules'))
  _setInsertionState(n12)
  const n34 = _createIf(() => (_ctx.error), () => {
    const n37 = t4()
    const n36 = _next(_child(n37), 1)
    const x36 = _txt(n36)
    _renderEffect(() => _setText(x36, _toDisplayString(_ctx.error)))
    return n37
  }, () => _createIf(() => (_ctx.lintResult), () => {
    const n39 = _createIf(() => (_ctx.activeTab === 'diagnostics'), () => {
      const n42 = t10()
      const n41 = _child(n42)
      const n43 = _next(_child(n41), 1)
      const n44 = _child(n43)
      _applySelectModel(n44, () => (_ctx.currentLocale), _value => (_ctx.currentLocale = _value))
      n44.$evtchange = _createInvoker(() => _ctx.setLocale(_ctx.currentLocale))
      _setInsertionState(n44)
      const n45 = _createFor(() => (_ctx.locales), (_for_item0) => {
        const n47 = t5()
        const x47 = _txt(n47)
        _renderEffect(() => {
          _setProp(n47, "value", _for_item0.value.code)
          _setText(x47, _toDisplayString(_for_item0.value.name))
        })
        return n47
      }, (locale) => (locale.code), 1)
      _setInsertionState(n42, 1)
      const n48 = _createIf(() => (_ctx.lintResult.diagnostics.length === 0), () => {
        const n51 = t6()
        const n50 = _child(n51)
        const n52 = _child(n50)
        _renderEffect(() => _setAttr(n52, "d", _ctx.mdiCheck, true))
        return n51
      }, () => {
        const n54 = t9()
        _setInsertionState(n54)
        const n55 = _createFor(() => (_ctx.lintResult.diagnostics), (_for_item0) => {
          const n59 = t8()
          const n57 = _child(n59)
          const n60 = _child(n57)
          const n63 = _child(n60)
          const n61 = _next(n60, 1)
          const n62 = _next(n61, 2)
          const n58 = _next(n57, 1)
          const x61 = _txt(n61)
          const x62 = _txt(n62)
          const x58 = _txt(n58)
          _setInsertionState(n59, 2)
          const n64 = _createIf(() => (_for_item0.value.help), () => {
            const n67 = t7()
            const n66 = _next(_child(n67), 1)
            _renderEffect(() => {
              n66.innerHTML = _ctx.formatHelp(_for_item0.value.help)
            })
            return n67
          })
          _renderEffect(() => {
            _setClass(n59, ['diagnostic-item', \`severity-\${_for_item0.value.severity}\`])
            _setAttr(n63, "d", _ctx.getSeverityIcon(_for_item0.value.severity), true)
            _setText(x61, _toDisplayString(_for_item0.value.rule))
            _setText(x62, _toDisplayString(_for_item0.value.location.start.line) + ":" + _toDisplayString(_for_item0.value.location.start.column))
            _setText(x58, _toDisplayString(_for_item0.value.message))
          })
          return n59
        }, (diagnostic) => (\`\${diagnostic.rule}:\${diagnostic.location.start.offset}:\${diagnostic.location.end.offset}:\${diagnostic.message}\`), 1)
        return n54
      })
      return n42
    }, () => _createIf(() => (_ctx.activeTab === 'rules'), () => {
      const n72 = t16()
      const n69 = _child(n72)
      const n73 = _next(_child(n69), 1)
      const n74 = _child(n73)
      const n77 = _child(n74)
      const n78 = _next(n77, 1)
      const n75 = _next(n74, 1)
      const n76 = _next(n75, 2)
      const n70 = _next(n69, 1)
      const n79 = _child(n70)
      const n80 = _next(n79, 1)
      const n84 = _nthChild(n72, 2)
      const n71 = _nthChild(n72, 3)
      n77.$evtclick = _createInvoker(() => _ctx.applyPreset('general-recommended'))
      n78.$evtclick = _createInvoker(() => _ctx.applyPreset('opinionated'))
      n75.$evtclick = _createInvoker(e => _ctx.enableAllRules(e))
      n76.$evtclick = _createInvoker(e => _ctx.disableAllRules(e))
      _applyTextModel(n79, () => (_ctx.searchQuery), _value => (_ctx.searchQuery = _value))
      _applySelectModel(n80, () => (_ctx.selectedCategory), _value => (_ctx.selectedCategory = _value))
      _setInsertionState(n80)
      const n81 = _createFor(() => (_ctx.categories), (_for_item0) => {
        const n83 = t11()
        const x83 = _txt(n83)
        _renderEffect(() => {
          _setProp(n83, "value", _for_item0.value)
          _setText(x83, _toDisplayString(_for_item0.value === "all" ? "All Categories" : _for_item0.value))
        })
        return n83
      }, (cat) => (cat), 1)
      _setInsertionState(n72, n84)
      const n85 = _createIf(() => (_ctx.selectedCategory !== 'all'), () => {
        const n88 = t12()
        const n87 = _child(n88)
        const n89 = _child(n87)
        const n90 = _next(n89, 1)
        const n91 = _next(n90, 2)
        const x90 = _txt(n90)
        const x91 = _txt(n91)
        n89.$evtchange = _createInvoker(($event) => _ctx.toggleCategory(_ctx.selectedCategory, $event.target.checked))
        _renderEffect(() => {
          _setProp(n89, "checked", _ctx.isCategoryFullyEnabled(_ctx.selectedCategory))
          _setProp(n89, "indeterminate", _ctx.isCategoryPartiallyEnabled(_ctx.selectedCategory))
          _setText(x90, _toDisplayString(_ctx.selectedCategory))
          _setText(x91, _toDisplayString(_ctx.filteredRules.length) + " rules")
        })
        return n88
      })
      _setInsertionState(n71)
      const n92 = _createFor(() => (_ctx.filteredRules), (_for_item0) => {
        const n96 = t14()
        const n94 = _child(n96)
        const n97 = _child(n94)
        const n99 = _child(n97)
        const n100 = _next(n99, 1)
        const n98 = _next(n97, 1)
        const n101 = _child(n98)
        const n102 = _next(n101, 1)
        const n95 = _next(n94, 1)
        const x100 = _txt(n100)
        const x101 = _txt(n101)
        const x102 = _txt(n102)
        const x95 = _txt(n95)
        n99.$evtchange = _createInvoker(() => _ctx.toggleRule(_for_item0.value.name))
        _setInsertionState(n98, 2)
        const n103 = _createIf(() => (_for_item0.value.fixable), () => {
          const n105 = t13()
          return n105
        })
        _renderEffect(() => {
          _setClass(n96, ['rule-item', { disabled: !_ctx.enabledRules.has(_for_item0.value.name) }])
          _setProp(n99, "checked", _ctx.enabledRules.has(_for_item0.value.name))
          _setText(x100, _toDisplayString(_for_item0.value.name))
          _setText(x101, _toDisplayString(_for_item0.value.category))
          _setClass(n102, ['badge', 'severity-badge', _for_item0.value.defaultSeverity])
          _setText(x102, _toDisplayString(_for_item0.value.defaultSeverity))
          _setText(x95, _toDisplayString(_for_item0.value.description))
        })
        return n96
      }, (rule) => (rule.name))
      _setInsertionState(n71, 1)
      const n106 = _createIf(() => (_ctx.filteredRules.length === 0), () => {
        const n108 = t15()
        return n108
      })
      _renderEffect(() => {
        _setClass(n77, [
                      'btn-action',
                      'btn-preset',
                      { active: _ctx.selectedPreset === 'general-recommended' },
                    ])
        _setClass(n78, [
                      'btn-action',
                      'btn-preset',
                      { active: _ctx.selectedPreset === 'opinionated' },
                    ])
      })
      return n72
    }))
    return n39
  }, () => {
    const n111 = t17()
    return n111
  }))
  _renderEffect(() => {
    _setAttr(n8, "d", _ctx.mdiAlert, true)
    _setAttr(n16, "d", _ctx.mdiCheckCircle, true)
    _setClass(n28, ['tab', { active: _ctx.activeTab === 'diagnostics' }])
    _setClass(n29, ['tab', { active: _ctx.activeTab === 'rules' }])
    _setText(x33, _toDisplayString(_ctx.enabledRuleCount) + "/" + _toDisplayString(_ctx.rules.length))
  })
  return n2
}
const __vaporRender = render

import "./PatinaPlayground.css";
import { ref, watch, computed, onMounted, onUnmounted, inject, type ComputedRef } from "vue";
import MonacoEditor from "../../shared/MonacoEditor.vue";
import type { WasmModule, LintResult, LintRule } from "../../wasm/index";
import { getWasm } from "../../wasm/index";
import { LINT_PRESET } from "../../shared/presets/patina";
import { mdiAlert, mdiCheckCircle, mdiCheck } from "@mdi/js";
import { formatHelp } from "../../utils/highlightCode";
import { useLocale } from "./useLocale";
import { useRuleManagement } from "./useRuleManagement";
import { useLinting } from "./useLinting";


export default /*@__PURE__*/_defineVaporComponent({
  __name: 'PatinaPlayground',
  props: {
    compiler: { type: null, required: true }
  },
  render: __vaporRender,
  setup(__props: any, { emit: __emit, attrs: __attrs, slots: __slots }) {

const props = __props;
const _injectedTheme = inject<ComputedRef<"dark" | "light">>("theme");
const theme = computed<"dark" | "light">(() => _injectedTheme?.value ?? "light");
const source = ref(LINT_PRESET);
const lintResult = ref<LintResult | null>(null);
const rules = ref<LintRule[]>([]);
const error = ref<string | null>(null);
const activeTab = ref<"diagnostics" | "rules">("diagnostics");
const lintTime = ref<number | null>(null);
const editorRef = ref<InstanceType<typeof MonacoEditor> | null>(null);
// Wire in composables (lazy callbacks to resolve circular dependency)
let lintFn: () => void = () => {};
const { locales, currentLocale, loadLocaleConfig, setLocale } = useLocale(() => lintFn());
const {
  selectedPreset,
  enabledRules,
  severityOverrides,
  selectedCategory,
  searchQuery,
  categories,
  filteredRules,
  loadRuleConfig,
  initializeRuleState,
  applyPreset,
  toggleRule,
  toggleCategory,
  enableAllRules,
  disableAllRules,
  isCategoryFullyEnabled,
  isCategoryPartiallyEnabled,
} = useRuleManagement(rules, () => lintFn());
const { lint, loadRules, registerHoverProvider, disposeHoverProvider, getSeverityIcon } =
  useLinting({
    source,
    selectedPreset,
    enabledRules,
    severityOverrides,
    currentLocale,
    editorRef,
    lintResult,
    rules,
    error,
    lintTime,
    initializeRuleState,
  });
lintFn = lint;
const errorCount = computed(() => lintResult.value?.errorCount ?? 0);
const warningCount = computed(() => lintResult.value?.warningCount ?? 0);
const enabledRuleCount = computed(() => enabledRules.value.size);
const diagnostics = computed(() => {
  if (!lintResult.value?.diagnostics) return [];
  return lintResult.value.diagnostics.map((d) => ({
    message: d.message,
    help: d.help,
    startLine: d.location.start.line,
    startColumn: d.location.start.column,
    endLine: d.location.end?.line ?? d.location.start.line,
    endColumn: d.location.end?.column ?? d.location.start.column + 1,
    severity: d.severity,
  }));
});
let lintTimer: ReturnType<typeof setTimeout> | null = null;
watch(
  source,
  () => {
    if (lintTimer) clearTimeout(lintTimer);
    lintTimer = setTimeout(lint, 300);
  },
  { immediate: true },
);
// Workaround for vite-plugin-vize prop reactivity issue
let hasCompilerInitialized = false;
let pollInterval: ReturnType<typeof setInterval> | null = null;
function tryInitialize() {
  const compiler = getWasm();
  if (compiler && !hasCompilerInitialized) {
    hasCompilerInitialized = true;
    if (pollInterval) {
      clearInterval(pollInterval);
      pollInterval = null;
    }
    loadRules();
    lint();
  }
}
onMounted(() => {
  loadLocaleConfig();
  loadRuleConfig();
  registerHoverProvider();
  tryInitialize();
  if (!hasCompilerInitialized) {
    pollInterval = setInterval(tryInitialize, 100);
    setTimeout(() => {
      if (pollInterval) {
        clearInterval(pollInterval);
        pollInterval = null;
      }
    }, 10000);
  }
});
onUnmounted(() => {
  if (pollInterval) {
    clearInterval(pollInterval);
    pollInterval = null;
  }
  disposeHoverProvider();
});

const __returned__ = { filteredRules, severityOverrides, disposeHoverProvider, watch, isCategoryFullyEnabled, warningCount, useLocale, getWasm, lintResult, isCategoryPartiallyEnabled, lintFn, lintTimer, MonacoEditor, enabledRules, lint, editorRef, categories, diagnostics, theme, props, registerHoverProvider, computed, pollInterval, searchQuery, LINT_PRESET, inject, currentLocale, loadLocaleConfig, toggleCategory, initializeRuleState, mdiAlert, _injectedTheme, activeTab, locales, toggleRule, hasCompilerInitialized, tryInitialize, mdiCheckCircle, rules, useLinting, applyPreset, source, selectedPreset, getSeverityIcon, setLocale, loadRuleConfig, error, ref, selectedCategory, enabledRuleCount, onUnmounted, mdiCheck, errorCount, formatHelp, disableAllRules, enableAllRules, onMounted, loadRules, useRuleManagement, lintTime }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})"
`;

exports[`vite-plugin vapor options > treats lowercase imported Tres-style components as Vapor components 1`] = `
"import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { createComponentWithFallback as _createComponentWithFallback } from 'vue';


function render(_ctx, $props, $emit, $attrs, $slots) {
  const _component_primitive = _ctx.Primitive
  const n0 = _createComponentWithFallback(_component_primitive, null, null, true)
  return n0
}
const __vaporRender = render
import { Primitive } from "@tresjs/core";


export default /*@__PURE__*/_defineVaporComponent({
  __name: 'TresPrimitive',
  render: __vaporRender,
  setup(__props, { emit: __emit, attrs: __attrs, slots: __slots }) {


const __returned__ = { Primitive }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})"
`;

exports[`vite-plugin vapor options > warns and falls back to standard SSR when Vapor is requested for SFCs 1`] = `
"import { defineComponent as _defineComponent } from 'vue'
import { ssrInterpolate as _ssrInterpolate, ssrRenderAttrs as _ssrRenderAttrs } from "@vue/server-renderer"


function ssrRender(_ctx, _push, _parent, _attrs, $props, $setup, $data, $options) {
  _push(\`<div\${_ssrRenderAttrs(_attrs)}>\${_ssrInterpolate($setup.count)}</div>\`)
}

const count = 1;

export default /*@__PURE__*/_defineComponent({
  __name: 'SsrFallback',
  ssrRender: ssrRender,
  setup(__props) {


const __returned__ = { count }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}

})"
`;
